Reverted to edit edt-618c1ac8-ffa4-4097-bdaf-f92b084a9832: "Fix: Sidebar UI shifting issue
Attempt to fix the sidebar UI shifting issue by overlaying it on pages."

--- a/src/App.css
+++ b/src/App.css
@@ -49,14 +49,8 @@
   0% {
     transform: translate(0, 0) scale(1.1);
   }
-  25% {
-    transform: translate(-8px, -5px) scale(1.1);
-  }
   50% {
-    transform: translate(0, -8px) scale(1.1);
-  }
-  75% {
-    transform: translate(8px, -5px) scale(1.1);
+    transform: translate(-5px, -5px) scale(1.1);
   }
   100% {
     transform: translate(0, 0) scale(1.1);
